de toList a collectorstoList